--- a/Trevor_Delsey_BSTA_514_Modeling_Project.qmd
+++ b/Trevor_Delsey_BSTA_514_Modeling_Project.qmd
@@ -401,6 +401,8 @@ fullmodel <- coxph(Surv(relapse_free_status_months, relapse) ~ pam50_claudin_low
                      pr_status+
                      x3_gene_classifier_subtype, data = metabric)
 
+vif(fullmodel)
+
 tidy(fullmodel)
 tidy(reduced_model)
 
@@ -409,9 +411,8 @@ tidy(reduced_model)
 cox.zph(fullmodel)
 
 
-full_model_transform <- cox.zph(Surv(relapse_free_status_months, relapse) ~ pam50_claudin_low_subtype +
+fullmodel <- coxph(metabric_surv ~ pam50_claudin_low_subtype +
                      age_at_diagnosis +
-                     tt(age_at_diagnosis) +
                      cohort +
                      inferred_menopausal_state +
                      lymph_nodes_examined_positive +
@@ -423,8 +424,8 @@ full_model_transform <- cox.zph(Surv(relapse_free_status_months, relapse) ~ pam5
                      neoplasm_histologic_grade +
                      integrative_cluster +
                      primary_tumor_laterality +
-                     pr_status+
-                     x3_gene_classifier_subtype, data = metabric)
+                     pr_status +
+                     x3_gene_classifier_subtype, data = training)
 ```
 
 ```{r}
@@ -433,7 +434,7 @@ avg_change_in_estim <- function(x, y = fullmodel) {
   
 }
 
-no_tumor_stage <- coxph(surv ~ pam50_claudin_low_subtype +
+no_tumor_stage <- coxph(metabric_surv ~ pam50_claudin_low_subtype +
                      age_at_diagnosis +
                      inferred_menopausal_state +
                      lymph_nodes_examined_positive +
@@ -445,11 +446,11 @@ no_tumor_stage <- coxph(surv ~ pam50_claudin_low_subtype +
                      integrative_cluster +
                      primary_tumor_laterality +
                      pr_status+
-                     x3_gene_classifier_subtype, data = metabric)
+                     x3_gene_classifier_subtype, data = training)
 
 avg_change_in_estim(no_tumor_stage) # < 10% avg change in estimate
 
-no_tumor_size <- coxph(surv ~ pam50_claudin_low_subtype +
+no_tumor_size <- coxph(metabric_surv ~ pam50_claudin_low_subtype +
                      age_at_diagnosis +
                      inferred_menopausal_state +
                      lymph_nodes_examined_positive +
@@ -460,11 +461,11 @@ no_tumor_size <- coxph(surv ~ pam50_claudin_low_subtype +
                      integrative_cluster +
                      primary_tumor_laterality +
                      pr_status+
-                     x3_gene_classifier_subtype, data = metabric)
+                     x3_gene_classifier_subtype, data = training)
 
 avg_change_in_estim(no_tumor_size) # > 10%
 
-no_chemo <- coxph(surv ~ pam50_claudin_low_subtype +
+no_chemo <- coxph(metabric_surv ~ pam50_claudin_low_subtype +
                      age_at_diagnosis +
                      inferred_menopausal_state +
                      lymph_nodes_examined_positive +
@@ -475,11 +476,11 @@ no_chemo <- coxph(surv ~ pam50_claudin_low_subtype +
                      integrative_cluster +
                      primary_tumor_laterality +
                      pr_status+
-                     x3_gene_classifier_subtype, data = metabric)
+                     x3_gene_classifier_subtype, data = training)
 
 avg_change_in_estim(no_chemo)# < 10% 
 
-no_npi <- coxph(surv ~ pam50_claudin_low_subtype +
+no_npi <- coxph(metabric_surv ~ pam50_claudin_low_subtype +
                      age_at_diagnosis +
                      inferred_menopausal_state +
                      lymph_nodes_examined_positive +
@@ -489,11 +490,11 @@ no_npi <- coxph(surv ~ pam50_claudin_low_subtype +
                      integrative_cluster +
                      primary_tumor_laterality +
                      pr_status+
-                     x3_gene_classifier_subtype, data = metabric)
+                     x3_gene_classifier_subtype, data = training)
 
 avg_change_in_estim(no_npi)# < 10%
 
-no_lymph <- coxph(surv ~ pam50_claudin_low_subtype +
+no_lymph <- coxph(metabric_surv ~ pam50_claudin_low_subtype +
                      age_at_diagnosis +
                      inferred_menopausal_state +
                      chemotherapy +
@@ -503,11 +504,11 @@ no_lymph <- coxph(surv ~ pam50_claudin_low_subtype +
                      integrative_cluster +
                      primary_tumor_laterality +
                      pr_status+
-                     x3_gene_classifier_subtype, data = metabric)
+                     x3_gene_classifier_subtype, data = training)
 
 avg_change_in_estim(no_lymph) # >10%
 
-no_menopause <- coxph(surv ~ pam50_claudin_low_subtype +
+no_menopause <- coxph(metabric_surv ~ pam50_claudin_low_subtype +
                      age_at_diagnosis +
                      lymph_nodes_examined_positive +
                      tumor_size +
@@ -516,11 +517,11 @@ no_menopause <- coxph(surv ~ pam50_claudin_low_subtype +
                      integrative_cluster +
                      primary_tumor_laterality +
                      pr_status+
-                     x3_gene_classifier_subtype, data = metabric)
+                     x3_gene_classifier_subtype, data = training)
 
 avg_change_in_estim(no_menopause) # > 10%
 
-no_age <- coxph(surv ~ pam50_claudin_low_subtype +
+no_age <- coxph(metabric_surv ~ pam50_claudin_low_subtype +
                      inferred_menopausal_state +
                      lymph_nodes_examined_positive +
                      tumor_size +
@@ -529,28 +530,44 @@ no_age <- coxph(surv ~ pam50_claudin_low_subtype +
                      integrative_cluster +
                      primary_tumor_laterality +
                      pr_status+
-                     x3_gene_classifier_subtype, data = metabric)
+                     x3_gene_classifier_subtype, data = training)
+
+no_x3
 
 avg_change_in_estim(no_age)# > 10%
 
-final_model <- coxph(surv ~ pam50_claudin_low_subtype +
-                     age_at_diagnosis +
+final_model <- coxph(metabric_surv ~ pam50_claudin_low_subtype +
                      inferred_menopausal_state +
                      lymph_nodes_examined_positive +
-                     npi_cat +
-                     tumor_size, data = metabric)
+                     tumor_size +
+                     type_of_breast_surgery +
+                     neoplasm_histologic_grade +
+                     integrative_cluster +
+                     primary_tumor_laterality +
+                     pr_status+
+                     x3_gene_classifier_subtype, data = training)
 
 # I am interested to see how adding the cohort variable affects the model at this point
+
+
+split <- initial_split(metabric_modeling, 0.8)
+training <- training(split)
+testing <- testing(split)
+
+metabric_surv = survival::Surv(time = relapse_free_status_months + .001, event = relapse == 1)
 
 final_cohort_model <- coxph(metabric_surv ~ pam50_claudin_low_subtype +
                      age_at_diagnosis +
                      inferred_menopausal_state +
                      lymph_nodes_examined_positive +
                      npi_cat +
-                     tumor_size + cohort, data = metabric)
+                     tumor_size + cohort +strata(x3_gene_classifier_subtype, integrative_cluster), data = training)
 
 avg_change_in_estim(final_cohort_model, final_model) # cohort seems to have a significant effect here so I think I will use this as the final model
 
+
+coeffs <- exp(final_cohort_model$coefficients)
+coeffs %>% tidy()
 
 ```
 ```{r}
@@ -560,13 +577,17 @@ ph_test
 
 
 ```
+
 ```{r}
 AIC(final_cohort_model)
 AIC(fullmodel)
+
+concordance(final_cohort_model, newdata = testing)
+
 ```
 Managed to remove many variables without sacrificing AIC at all.
 
 ```{r}
-save(final_model, fullmodel, metabric, pam_50_km, file = here("data/Modeling_project.Rda"))
+# save(final_model, fullmodel, metabric, pam_50_km, file = here("data/Modeling_project.Rda"))
 ```
 
